--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "@types/passport-jwt": "^3.0.7",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.8.4"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
